--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
 
         stage('Set Up Python Virtual Environment') {
             steps {
-                bat '"C:\\Users\\yashwant\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe" -m venv venv'
+                bat '"C:\\Program Files\\Python311\\python.exe" -m venv venv'
                 bat '.\\venv\\Scripts\\python.exe -m pip install --upgrade pip'
                 bat '.\\venv\\Scripts\\pip install tensorflow pandas numpy flask'
             }
